Modified and added citation to Adaboost

--- a/FinalReport/final_report.bib
+++ b/FinalReport/final_report.bib
@@ -305,3 +305,8 @@ ISSN={0162-8828},}
     urldate = {30/01/2012}
 }
 
+@MISC{Freund96experimentswith,
+    author = {Yoav Freund and Robert E. Schapire},
+    title = {Experiments with a New Boosting Algorithm},
+    year = {1996}
+}
