--- a/FinalReport/final_report.tex
+++ b/FinalReport/final_report.tex
@@ -159,7 +159,7 @@ We did not pursue this approach due to very high computational requirements.
 Furthermore, loopy belief propogation did not converge after more than 6 hours of training.
 
 \subsection{Adaboost}
-We explored used Adaboost instead of random forests but random forests gave better results on the classification task.
+We used Adaboost \cite{Freund96experimentswith} for training the classifier instead of the random forests but random forests gave better results on the classification task. 
 
 %------------------------------------------------------------------------------------------
 
