--- a/FinalReport/final_report.tex
+++ b/FinalReport/final_report.tex
@@ -2,7 +2,7 @@
 \usepackage{nips12submit_e,times}
 \usepackage{amsmath}
 \usepackage{graphicx}
-%\usepackage{caption}
+\usepackage{caption}
 \usepackage{subcaption}
 \usepackage{comment}
 \usepackage{hyperref}
