* Fixed a technical issue with discussion of probabilities

--- a/FinalReport/final_report.tex
+++ b/FinalReport/final_report.tex
@@ -131,7 +131,7 @@ this sorted list.
 \subsubsection{Baseline}
 \label{baseline}
 The label propagation approach discussed above requires per pixel values
-for $P(Label)$.
+for $P(Label|feature)$.
 The algorithm which provides this is referred to as baseline and described
 below in detail.
 
