--- a/FinalReport/final_report.tex
+++ b/FinalReport/final_report.tex
@@ -172,16 +172,15 @@ We used Adaboost \cite{Freund96experimentswith} for training the classifier inst
 \section{Experiments}
 \label{sec:Exp}
 
-
-\subsection{Description of Experiments}
-\label{sec:Description}
-
-\subsubsection{Cross Validation}
-\label{sec:cross}
 We tested our algorithm on the MSRC V1 Dataset \cite{MSRC}, which we randomly split into 120 test images and 120 training images.
-Superpixels and connectivity graphs for all the images were precomputed and stored.
-Then, we performed leave-one-out cross validation amongst the training images to optimize the parameters in the algorithm.
-These parameters are $k_{bag}$ for the $k$-nearest-neighbor images from which the bag of words model is computed, $k_{hist}$ for the $k$-nearest-neighbor Texton histograms from which the distribution $P(Label | feature)$ is generated, $k_{forest}$ for the $k$-nearest-neighbors used by the random forest, and a ratio parameter used to balanced the number true and false edges on the connectivity graph. 
+We tested our algorithm to quantify the improvement over the prior segmentation that the label propagation method provided. We also examined the performance gain from training both the random forest and bag of words model on the $k$-NN versus training on all the images.
+
+\subsection{Cross Validation}
+\label{sec:cross}
+
+To optimize our algorithm we performed leave-one-out cross validation. We chose this particular style of cross-validation because our algorithm requires retraining the random forest for each test image. Thus, all forms of $k$-fold cross validation reduce to leave-one-out validation for our algorithm.
+
+The cross validation parameters that needed to be optimized were $k_{bag}$ for the $k$-nearest-neighbor images from which the bag of words model is computed, $k_{hist}$ for the $k$-nearest-neighbor Texton histograms from which the distribution $P(Label | feature)$ is generated, $k_{forest}$ for the $k$-nearest-neighbors used by the random forest, and a ratio parameter used to balanced the number true and false edges on the connectivity graph. 
 
 Due to a lack of computational resources, optimizing these four parameters simultaneously proved intractable. Therefore, the we assumed that the parameters for the bag-of-words model and the random forest affect the final segmentation independently. This assumption is supported by the relative magnitudes by which the parameters affect the accuracy of the semantic segmentation
 
@@ -189,7 +188,7 @@ Due to a lack of computational resources, optimizing these four parameters simul
 \centering
 	\begin{subfigure}[t]{0.33\textwidth}
 		\centering
-		\includegraphics[width = \textwidth]{./img/pickK_final}
+		\includegraphics[width = \textwidth]{./img/pickK}
 		\parbox{.95\textwidth}{\caption{Accuracy versus bag of words model parameters obtained from leave-one-out cross validation. The chosen parameters $k_{imgs} = 15$, and $k_{histo} = 7$ are highlighted. \label{fig:Kbag} }}
 			\end{subfigure}
 	\begin{subfigure}[t]{0.33\textwidth}
@@ -202,11 +201,13 @@ Due to a lack of computational resources, optimizing these four parameters simul
 		\includegraphics[width = \textwidth]{./img/ratio}
 		\parbox{0.95\textwidth}{\caption{Accuracy versus true/false points ratio obtained from leave-one-out cross validation. A ratio  of 0.5 was chosen. \label{fig:ratio}}}
 	\end{subfigure}
+
+	\caption{}
 \end{figure}
 
 Figure \ref{fig:Kbag} shows the accuracy of the final segmentations of the validation images with respect to the bag of words model parameters. 
-For this test, the parameters for the random forest, $k_{forest}$ value and ratio, were set 11 and 0.8 respectively. 
-We chose a set of parameters that produced a high accuracy result and also had low first and second derivatives. We believe low derivatives are desirable as they indicate stability and therefore characterize parameters that generalize well to the test data. 
+For this test, the parameters for the random forest, $k_{forest}$ value and ratio, were set to 7 and 0.7 respectively. 
+We chose a set of parameters that produced a high accuracy result and also had low first and second derivatives. Low derivatives are desirable as they indicate stability and therefore characterize parameters that generalize well to the test data.
 Consequently, we chose $k_{bag} = 15$, and $k_{hist} = 7$ as these parameters satisfy these properties.
 
 The next parameter we validated was the number of nearest neighbor images on which to train the random forest, $k_{forest}$. 
@@ -222,9 +223,16 @@ Without this parameter, all tested classifiers tended to fit to the positive lab
 For our application, this is extremely undesirable, as a false-positive, resulting in the classifier propagating a label when it should not have, can only degrade the segmentation. 
 For high ratio values, (0.8 - 1.2) this same behavior was observed, as suggested by the variability of figure \ref{fig:ratio} in this range. We chose a ratio of 0.5 for our final classifier, as it resulted in high specificity values, and ensured that the label propagation indicator would be conservative. 
 
-\subsubsection{Experimental Setup}
-Once we obtained the optimal parameters via the procedure described above, we proceeded to test the segmentation algorithm on the 120 images in the test set. 
-Figure \ref{fig:result_good} shows a typical result from the segmentation algorithm. In this result, one can see that the error near the hind-legs of the cow on the left, in which a portion of the cow was labeled grass, was successfully fixed using our algorithm. Additionally, the erroneous tree label that appears on the right side of the image is partially replaced by cow and tree labels. However, in this example there is an entire cow mislabeled as a building (in red). Our algorithm is not able to correct a mistake such as this, because it can only propgate labels and cannot re
+\subsection{Experimental Setup}
+
+Once we obtained the optimal parameters via the procedure described above, we proceeded to test the segmentation algorithm on the 120 images in the test set. We also tested training the random forest and bag of words model on the $k-$NN training images versus training on all the training images.
+
+Our testbed process iterated through all images in the test set, obtained their prior, and final, post-propagation, segmentations. Then, the process calculated accuracy scores and confusion matrices, across all images, for the prior and the final segmentations and a confusion matrix for the changed superpixels across all images. 
+
+\subsection{Observations}
+\label{sec:Observations}
+
+Figure \ref{fig:result_good} shows a typical result from the segmentation algorithm. In this result, one can see that the error near the hind-legs of the cow on the left, in which a portion of the cow was labeled grass, was successfully fixed using our algorithm. Additionally, the erroneous tree label that appears on the right side of the image is partially replaced by cow and tree labels. However, in this example there is an entire cow mislabeled as a building (in red). Our algorithm is not able to correct a mistake such as this, because it can only propagate existing labels and cannot assign labels by inferring which label would be most probable given the label of the lower entropy superpixel. Our attempted Markov logic network approach should have been able to perform this task, but as mentioned earlier, this approach was infeasible due to memory constraints.
 
 \begin{figure}[htb]
 \centering
@@ -262,15 +270,22 @@ Figure \ref{fig:result_good} shows a typical result from the segmentation algori
 	\label{fig:result_good}
 \end{figure}
 
-\subsection{Observations}
+The overall effect of our label propagation method can be seen in figure \ref{fig:confuse}. This figure shows the confusion matrices for the final segmentation (\ref{fig:conuse_final}), the prior segmentation (\ref{fig:conuse_prior}), and the changed superpixels (\ref{fig:conuse_change}). The confusion matrices for the final and prior segmentations show how, across all test images, our algorithm classified pixels, versus how they are classified in the ground truth images. Specifically, the value  of the $i,j^\textrm{th}$ element in the matrix corresponds to the ratio of instances where our classifier labeled pixels as $j$, when they are labeled $i$ in the ground truth image over the total number of appearances of the $i^\textrm{th}$ label in the dataset. Ideally, this matrix should be diagonal, as this would correspond to perfect agreement between the produced semantic segmentations and the ground truth images. As one can see in the figure the confusion matrices calculated from the result of our test are, for the most part diagonal. 
 
-\label{sec:Observations}
+We can then subtract these confusion matrices to arrive at the confusion matrix for the changed labels. The light elements in this confusion matrix correspond to label co-occurrences of ground truth and final labelings that have increased, while the black regions denote co-occurrences that have decreased. This confusion matrix shows the increases in correctly labeled classes as white elements along its diagonal. Of note is the many negative elements in the first column of the matrix. These correspond to decreases in the number of labels classified as void in the final segmentations versus the prior segmentations.
 
+From these confusion matrices we can calculate the accuracy of the prior segmentation, the final segmentation, and the accuracy of the changed superpixels. This metric is computed via the following formula:
+
+\begin{equation}
+	accuracy = \frac{\mathrm{trace}(A)}{n^2/2}
+\end{equation}
+
+Where $A$ is a confusion matrix and $n$ is the total number of classes, in our case 14. We found that the accuracy of our prior segmentations, across all images, was $56.78\%$ while the accuracy of our final segmentations was $56.88\%$. Therefore the improvement in our accuracy was $0.17\%$. This corresponds to a net of roughly 60 superpixels changed correctly across all the test images.
 %------------------------------------------------------------------------------------------
 
 \section{Conclusion}
 \label{sec:Conclusion}
-We have experimented with an approach to label propogation methods for semantic segmantation and presented a very simple segmentation algorithm for obtaining a prior. The results, however, show that our approach cannot fix major errors in the prior. A better prior may certainly give much better results. State of art methods in this field out perform the results that we have presented. We conclude with the following three observations:-
+We have experimented with an approach to label propagation methods for semantic segmentation and presented a very simple segmentation algorithm for obtaining a prior. The results, however, show that our approach cannot fix major errors in the prior. A better prior may certainly give much better results. State of art methods in this field out perform the results that we have presented. We conclude with the following three observations:
 \begin{itemize}
 \item Training on the nearest neighbors can greatly improve performance.
 \item Inadequate feature representation can result in data that is very hard to separate.
